k8s/monitoring/loki-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`loki.k8s.sbbh.cloud`)
      priority: 10
      services:
        - name: monitoring-loki-distributed-query-frontend
          port: 3100
